[package]
name = "iter_lint_no_std_print"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Forbid std `println!`/`print!`/`eprintln!`/`eprint!`/`dbg!` outside tests; iter uses `tracing`."

# Dylint loads lint libraries as cdylibs. `rlib` is included so the lint
# can also be embedded in a larger combined library if we ever bundle
# multiple lints together (cf. dylint's `constituent` feature).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = { workspace = true }

[dev-dependencies]
dylint_testing = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
